--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>O&F Transport - Livraison et Déménagement Professionnel et Personnel</title>
+  <title>O&F Transport - Livraison et Déménagement Professionnel et particuliers</title>
    <!-- Favicon -->
    <link rel="icon" href="favicon.png" type="image/png">
   <!-- Polices Google Fonts -->
@@ -74,9 +74,9 @@
 
   <!-- Header / Hero Section -->
   <header>
-    <img src="hero-bg.jpg" alt="Services de Livraison et Déménagement Professionnel et Personnel">
+    <img src="hero-bg.jpg" alt="Services de Livraison et Déménagement Professionnel et particuliers">
     <div class="header-text">
-      <h1>Livraison et Déménagement Professionnel et Personnel</h1>
+      <h1>Livraison et Déménagement Professionnel et particuliers</h1>
       <p>Service rapide, sécurisé et sur mesure pour particuliers et entreprises</p>
       <a href="#devis" class="cta-button">Demander un devis <i class="fas fa-arrow-right"></i></a>
     </div>
@@ -366,7 +366,7 @@
       <div class="footer-content">
         <div class="footer-col">
           <h3>À propos de nous</h3>
-          <p>O&F Transport est une entreprise de Livraison et Déménagement Professionnel et Personnel le basée à Noisiel. Nous offrons des services complets pour particuliers et entreprises avec une équipe expérimentée et dévouée.</p>
+          <p>O&F Transport est une entreprise de Livraison et Déménagement Professionnel et particuliers le basée à Noisiel. Nous offrons des services complets pour particuliers et entreprises avec une équipe expérimentée et dévouée.</p>
           <div class="social-icons">
             <a href="https://www.facebook.com/p/OF-Transport-61554299171480/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://wa.me/+33628114145" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -397,7 +397,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2023 O&F Transport - Tous droits réservés | Livraison et Déménagement Professionnel et Personnel en France</p>
+        <p>&copy; 2023 O&F Transport - Tous droits réservés | Livraison et Déménagement Professionnel et particuliers en France</p>
       </div>
     </div>
   </footer>
